Fix resized going off screen by giving layer gutter a max width of 500

--- a/js/panels/Timeline/TimelinePanel.reel/css/TimelinePanel.css
+++ b/js/panels/Timeline/TimelinePanel.reel/css/TimelinePanel.css
@@ -27,6 +27,7 @@
 }
 .tl_leftpane{
     min-width: 200px;
+    max-width: 500px;
     position: relative;
     overflow: hidden;
     -webkit-box-flex: 0;
